--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "request": "^2.55.0"
   },
   "devDependencies": {
-    "dotenv": "^1.1.0"
+    "chai": "^2.3.0",
+    "dotenv": "^1.1.0",
+    "mocha": "^2.2.4",
+    "sinon": "^1.14.1"
   }
 }
