Set up framework for tests.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Worker process for HITraffic",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel/register",
     "start": "babel-node index.js",
     "ungeocoded": "babel-node index.js ungeocoded"
   },
